<resources>
    <string name="app_name">Assignment1</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="result"></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="time">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="clear">C</string>

    <string name="advance">ADVANCE-SCIENTIFIC</string>
    <string name="standard">STANDARD</string>
    <string name="pow">POW</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="modulo">%</string>



</resources>