<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

<!--Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="38dp"
        android:text="@string/assignment_1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/CornflowerBlue"
        android:textSize="20sp"
         />

<!--Result Display-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/result"
        android:textSize="30sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/result"
        />
<!--Button Section 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="4"
    >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"

            android:id="@+id/one"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/two"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/three"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/add"

            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <!--Button Section 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="4"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/four"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/five"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/six"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/subtract"

            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <!--Button Section 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="4"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/seven"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/eight"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/nine"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/time"

            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <!--Button Section 4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="4"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/clear"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/zero"

            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/equal"
            android:onClick="equalOnClicked"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_weight="1"
            android:textSize="20sp"
            android:id="@+id/divide"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/advance"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/advance"
            android:onClick="showAdvance"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/advancePlatform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="70dp"
        android:layout_marginBottom="0dp"
        android:background="@color/black"
        android:gravity="center"
        android:weightSum="6">

        <Button
            android:id="@+id/modulo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/modulo"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/pow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/pow"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/max"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/max"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/min"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/min"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>